Change covers, chapters and sections titles, fix bugs, ... contains last version

--- a/Config/_cover.tex
+++ b/Config/_cover.tex
@@ -42,8 +42,8 @@
 % -------------------------------------------------------------------
 
 % Just a heads-up: at ISEL, we don't translate dissertation names, so I'd suggest keeping it in the original language.
-\nctitle(main,en){Master Thesis Title}%
-\nctitle(main,pt){Master Thesis Title}%
+\nctitle(main,en){Master Thesis Title, Project Work or Internship Report}%
+\nctitle(main,pt){Master Thesis Title, Project Work or Internship Report}%
 
 % -------------------------------------------------------------------
 % SUBMISSION DATE
@@ -80,5 +80,3 @@
 
 % INCLUDE IMAGE. ADD FILE IN CHAPTERS-> IMG
 \workimage{phdcomics}
-
-
