--- a/ISELthesis-files/user-sty/fix-profiling.sty
+++ b/ISELthesis-files/user-sty/fix-profiling.sty
@@ -1,7 +1,7 @@
 \providecommand{\pdfresettimer}{}
 \ifcsname pdfelapsedtime\endcsname\else\newcount{\pdfelapsedtime}\pdfelapsedtime=0\fi
 
-\RequirePackage{l3benchmark}
+%\RequirePackage{l3benchmark}
 \ExplSyntaxOn
 \cs_new_eq:NN \benchmarktic \benchmark_tic:
 \cs_new_eq:NN \benchmarktoc \benchmark_toc:
