--- a/changelog.txt
+++ b/changelog.txt
@@ -11,3 +11,9 @@
 + Computer Modern Bright fonts do not support details and special characters. For this reason, the font of the sections is modified in the defaults.clo file
 *2024-09-26 — Version 4.0.1
 + Add Copyright and fix some minor errors.
+*2025-10-21 — Version 4.1
++ Change cover and second-cover (include pdf as background)
++ Remove image in the cover
++ Change orientations for print committee and adviser members 
++ Add gantt diagram
++ Change chapters format and colors
