statement will now print only in the main language of the thesis

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -85,7 +85,7 @@
    year = "1979"
    }
 
-@ARTICLE{Zurek:1993,
+@Article{Zurek:1993,
    AUTHOR  = {Zurek, R. W. and Martin, L. J.},
    TITLE   = {Interannual Variability of planet-encircling dust activity on {M}ars},  
    YEAR    = {1993},
