--- a/Config/_department.tex
+++ b/Config/_department.tex
@@ -41,7 +41,7 @@
 % \ncmajorfield(en){Electronics and Telecommunications Engineering}
 
 \ncmajorfield(pt){Engenharia Informática e de Computadores}
-\ncmajorfield(en){Computer Science and Engineering}
+\ncmajorfield(en){Computer Science and Computer Engineering}
 
 % \ncmajorfield(pt){Engenharia Informática e Multimédia}
 % \ncmajorfield(pt){Informatics and Multimedia Engineering}
