--- a/Config/_files.tex
+++ b/Config/_files.tex
@@ -24,7 +24,8 @@
 
 %%------------------------------------------------------------
 % Statement text. Will only be considered for final documents, i.e., "bsc" and "msc", otherwise, it will be silently ignored
-\statementfile{statement}
+\statementfile[pt]{statement-pt}
+\statementfile[en]{statement-en}
 
 %%------------------------------------------------------------
 % File with the dedicatory text. Will only be considered for final documents,
