--- a/Config/_cover.tex
+++ b/Config/_cover.tex
@@ -25,7 +25,7 @@
 % SYNTAX: \ncauthordegree{degree}
 % -------------------------------------------------------------------
 
-\ncauthordegree(en){Licenciado} 
+\ncauthordegree(en){Graduated} 
 \ncauthordegree(pt){Licenciado}
 
 % -------------------------------------------------------------------
