--- a/template.tex
+++ b/template.tex
@@ -36,7 +36,7 @@
   docdegree=msc,        % msc(*), mscprep, bsc
   doctype=dissertation, % dissertation(*), project
   lang=en,              % en, pt(*)
-  coverlang=pt,         % defaults to main language
+  coverlang=en,         % defaults to main language
   fontstyle=kpfonts,    % baskervaldx bookman charter ebgaramond fbb fourier garamond
                         % heuristica kpfonts(*) libertine mathpazo1 mathpazo2 newcent
                         % newpx newtx 
