--- a/template.tex
+++ b/template.tex
@@ -30,13 +30,13 @@
 %%%
 %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    
+
 % The default option marked with (*)
 \documentclass[
   docdegree=msc,        % msc(*), mscprep, bsc
   doctype=dissertation, % dissertation(*), project
-  lang=en,              % en, pt(*)
-  coverlang=en,         % defaults to main language
+  lang=pt,              % en, pt(*)
+  coverlang=pt,         % defaults to main language
   fontstyle=kpfonts,    % baskervaldx bookman charter ebgaramond fbb fourier garamond
                         % heuristica kpfonts(*) libertine mathpazo1 mathpazo2 newcent
                         % newpx newtx 
