--- a/changelog.txt
+++ b/changelog.txt
@@ -23,3 +23,6 @@
 # Add template.xmpdata for the metadata file
 # Convert the template.pdf document to PDF/A-2b format
 # Delete _metadata.xmpdata file
+*2025-10-23 — Version 4.1.2
++ Remove horizontal lines in all chapters page
++ Change font style to verdana
