--- a/template.tex
+++ b/template.tex
@@ -37,9 +37,9 @@
   doctype=dissertation, % dissertation(*), project
   lang=pt,              % en, pt(*)
   coverlang=pt,         % defaults to main language
-  fontstyle=kpfonts,    % baskervaldx bookman charter ebgaramond fbb fourier garamond
-                        % heuristica kpfonts(*) libertine mathpazo1 mathpazo2 newcent
-                        % newpx newtx 
+  fontstyle=verdana,    % baskervaldx bookman charter ebgaramond fbb fourier garamond
+                        % heuristica kpfonts libertine mathpazo1 mathpazo2 newcent
+                        % newpx newtx verdana(*)
   chapstyle=isel,       % bianchi bluebox brotherton dash default  
                         % elegant ell ger hansen isel(*) jenor lyhne 
                         % madsen pedersen veelo vz14 vz34 vz43
